--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -75,7 +75,7 @@
 		"title": "Titel",
 		"noResults": "Keine Ergebnisse",
 		"reset": "Zurücksetzen",
-		"exam": "Prüfung",
+		"exam": "Test / Prüfung",
 		"create": "erstellen",
 		"copy": "kopieren",
 		"place": "stellen",
@@ -426,7 +426,7 @@
 		"selfReflection": "Selbstreflexion",
 		"achievedIndividualLearning": "Individuelles Lernziel erreicht",
 		"presence90": "90% Anwesenheit",
-		"practicalApplication": "Praxis-Awendung",
+		"practicalApplication": "Praxis-Anwendung",
 		"onlineCourseCompleted": "Online-Kurs abgeschlossen",
 		"projectCompleted": "Projekt-Abschluss",
 		"addOwnCriteria": "Eigenes Kriterium hinzufügen",
