--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,7 +75,7 @@
 		"title": "Title",
 		"noResults": "No results",
 		"reset": "Reset",
-		"exam": "Exam",
+		"exam": "Test / Exam",
 		"create": "create",
 		"copy": "copy",
 		"place": "place",
