feat: change label

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -425,7 +425,7 @@
 		"activeParticipation": "Aktive Teilnahme",
 		"selfReflection": "Selbstreflexion",
 		"achievedIndividualLearning": "Individuelles Lernziel erreicht",
-		"presence90": "90% Anwesenheit",
+		"passed75": "75% bestanden",
 		"practicalApplication": "Praxis-Anwendung",
 		"onlineCourseCompleted": "Online-Kurs abgeschlossen",
 		"projectCompleted": "Projekt-Abschluss",
