--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -425,7 +425,7 @@
 		"activeParticipation": "Active Participation",
 		"selfReflection": "Self-Reflection",
 		"achievedIndividualLearning": "Individual Learning Goal Achieved",
-		"presence90": "90% Attendance",
+		"passed75": "passed 75%",
 		"practicalApplication": "Practical Application",
 		"onlineCourseCompleted": "Online Course Completed",
 		"projectCompleted": "Project Completed",
