refactor: use clipboard api for copy, add feedback after copy

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -790,7 +790,8 @@
     "deleteCollection": "Delete Collection",
     "deleteText": "Are you sure you want to delete collection {{ collectionname }}?",
     "searchBadges": "Search my badges",
-    "downloadQrCode": "Download QR-Code"
+    "downloadQrCode": "Download QR-Code",
+    "copiedToClipboard": "Copied to clipboard!"
   },
   "Profile": {
     "more": "More",
