--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -760,6 +760,7 @@
 		"createCollection": "Sammlung anlegen",
 		"editCollection": "Sammlung bearbeiten",
 		"share": "Teilen",
+		"shareCollection": "Sammlung teilen",
 		"orginzeBadges": "Organisiere deine Badges in Sammlungen.",
 		"collectionName": "Name der Sammlung",
 		"collectionNamePlaceholder": "Tech & Code – Meine digitalen Fähigkeiten für die Zukunft",
@@ -788,7 +789,9 @@
 		"downloadPdf": "PDF herunterladen",
 		"deleteCollection": "Sammlung löschen",
 		"deleteText": "Bist du sicher, dass du die Sammlung {{ collectionname }} löschen möchtest?",
-		"searchBadges": "Meine Badges durchsuchen"
+		"searchBadges": "Meine Badges durchsuchen",
+		"downloadQrCode": "QR-Code herunterladen",
+		"copiedToClipboard": "In die Zwischenablage kopiert!"
 	},
 	"Profile": {
 		"more": "Mehr",
