fix: remove things, add translation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -259,6 +259,7 @@
 		"batchAwardText1": "Vergebe den Badge an eine lernende Person oder",
 		"batchAwardTextLink": "klicke hier, um den Badge an mehrere Lernende gleichzeitig",
 		"batchAwardText2": "zu vergeben",
+		"batchAwardFailed": "Badge-Massenvergabe fehlgeschlagen",
 		"awardedPerson": "Name der Empfänger:in",
 		"sendEmail": "Empfänger:in mit E-Mail benachrichtigen",
 		"giveBadge": "Badge vergeben",
