--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -259,6 +259,8 @@
 		"batchAwardText1": "Vergebe den Badge an eine lernende Person oder",
 		"batchAwardTextLink": "klicke hier, um den Badge an mehrere Lernende gleichzeitig",
 		"batchAwardText2": "zu vergeben",
+		"batchAwardFailed": "Badge-Massenvergabe fehlgeschlagen",
+		"failedBatchMonitoring": "Fortschitt der Vergabe konnte nicht ermittelt werden",
 		"awardedPerson": "Name der Empfänger:in",
 		"sendEmail": "Empfänger:in mit E-Mail benachrichtigen",
 		"giveBadge": "Badge vergeben",
@@ -436,7 +438,9 @@
 		"competencyBadgeInfo": "kann (mithilfe unseres KI-Assistenten) mit den Kompetenzen gefüllt werden, die deine Lernenden erwerben.",
 		"learningPathBadgeInfo": "verbindet mehrere Badges zu einer größeren Lerneinheit. Wenn Lernende alle Badges dieses „Lernpfades” erworben haben, erhalten sie automatisch den Abschluss Micro Degree.",
 		"lastEdited": "Zuletzt editiert",
-		"badgeSuccessfullyCreated": "Der Badge wurde erfolgreich an {{recipient}} vergeben"
+		"badgeSuccessfullyCreated": "Der Badge wurde erfolgreich an {{recipient}} vergeben",
+		"awardingInProgress": "Badge-Vergabe läuft",
+		"willBeAwardedSoon": "Gleich haben wir alle Badges verschickt!"
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Kategorie wählen",
