--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -355,7 +355,8 @@
 		"importPreview": "Import preview",
 		"rowsWereImported": "rows could be imported.",
 		"rowsAreDuplicates": "rows are duplicates and are ignored.",
-		"clickOnAwardBadges": "Click on \"award badges\" to award the badges to your learners now."
+		"clickOnAwardBadges": "Click on \"award badges\" to award the badges to your learners now.",
+		"creatingBadge": "Creating Badge"
 	},
 	"Badge": {
 		"groupBy": "Group by",
