--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,7 +122,7 @@
 	"Start": {
 		"desc1": "A learner-centered approach",
 		"desc2": "for documenting & feedback on the learning process",
-		"poweredBy": "Open Educational Badges is a joint project by <a href='https://matrix-gruppe.de/matrix-gemeinnuetzig/'>matrix gGmbh</a>, <a href='https://mycelia.education/'>mycelia gGmbh</a> and <a href='https://opensenselab.org/'>openSenseLab gGmbh</a>",
+		"poweredBy": "Open Educational Badges is a joint project by <a href='https://matrix-gruppe.de/matrix-gemeinnuetzig/'>matrix gGmbH</a>, <a href='https://mycelia.education/'>mycelia gGmbH</a> and <a href='https://opensenselab.org/'>openSenseLab gGmbH</a>.",
 		"imprint": "Imprint",
 		"privacyPolicy": "Privacy Policy",
 		"ourIdeaTitle": "Our Idea",
