feat: add memberview link

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -356,7 +356,8 @@
 		"rowsWereImported": "Zeilen konnten importiert werden.",
 		"rowsAreDuplicates": "Zeilen sind Duplikate und werden ignoriert.",
 		"clickOnAwardBadges": "Klicke auf \"Badges vergeben\", um die Badges jetzt an deine Lernenden zu vergeben.",
-		"creatingBadge": "Erstelle Badge"
+		"creatingBadge": "Erstelle Badge",
+		"memberView": "Mitglieds-Ansicht"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
