--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -774,6 +774,7 @@
 		"description": "Description of the collection",
 		"descriptionPlaceholder": "These badges show that I not only understand the digital world, but also actively shape it. From programming and algorithms to IT security - I know the tools of the future and use them creatively to solve technical challenges.",
 		"provideDescription": "Please provide a description",
+		"descriptionMax300": "The description should not exceed 300 characters",
 		"myCollections": "My Collections",
 		"useCollectionsForApplications": "Use collections for applications",
 		"collectionInfoText": "Organize your badges into collections and download the respective PDF or create a direct-link for sharing.",
