--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -909,7 +909,8 @@
 		"download": "Download QR-Code",
 		"toBadgeDetail": "Zur Badge Detail-Seite",
 		"downloadPoster": "Download QR-Code-Plakat",
-		"badgeDetailPage": "Badge Detail Seite"
+		"badgeDetailPage": "Badge Detail Seite",
+		"badgesAwardedSuccessfully": "Badges erfolgreich vergeben"
 	},
 	"LearningPath": {
 		"learningpaths": "Micro Degrees",
