--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -909,7 +909,8 @@
 		"download": "Download QR code",
 		"toBadgeDetail": "To Badge detail page",
 		"downloadPoster": "Download QR-Code-Poster",
-		"badgeDetailPage": "badge detail page"
+		"badgeDetailPage": "badge detail page",
+		"badgesAwardedSuccessfully": "badges awarded successfully"
 	},
 	"LearningPath": {
 		"learningpaths": "Micro Degrees",
