--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -714,7 +714,7 @@
 		"badgeUploadVersionError": "Unfortunately uploading this badge version is not possible.",
 		"uploadEmailDoesNotMatchError": "The email address in the badge does not match the email in your OEB profile.",
 		"addEmailToUpload": "Add the email address to your profile to upload the badge.",
-		"versionUploadInfo": "Unfortunately at the moment only badges of version 2.1 can be uploaded",
+		"versionUploadInfo": "We validate badges in the 2.0 standard when they are uploaded. We can currently only validate badges in the 3.0 standard to a minimal extent. You can find more information on this in our <a class=\"tw-text-link tw-underline\" href=\"/public/faq\">FAQ</a>.",
 		"addingBadge": "Adding Badge ..."
 	},
 	"EditBadge": {
