fix: add missing translation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -977,7 +977,8 @@
 		"finishedOn": "Abgeschlossen am",
 		"deleteMd": "Micro Degree löschen",
 		"mdUsers": "Micro Degree-Nutzende",
-		"searchMds": "Micro Degrees durchsuchen"
+		"searchMds": "Micro Degrees durchsuchen",
+		"saving": "Speichere"
 	},
 	"LearningPathEditor": {
 		"shortDescription": "Zusammenfassende Beschreibung deines Micro Degrees. Diese Kurzbeschreibung wird im Micro Degree gespeichert."
