fix: badge catalog count

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -373,10 +373,10 @@
 		"noCategory": "Keine Kategorie",
 		"noIssuers": "keiner Institution",
 		"oneIssuer": "einer Institution",
-		"multiIssuers": "# Institutionen",
+		"multiIssuers": "Institutionen",
 		"noBadges": "Keine Badges",
 		"oneBadge": "1 Badge",
-		"multiBadges": "# Badges",
+		"multiBadges": "Badges",
 		"noRecipients": "Keine Empfänger:in",
 		"oneRecipient": "1 Empfänger",
 		"multiRecipients": "Empfänger:innen",
