--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -373,10 +373,10 @@
 		"noCategory": "No category",
 		"noIssuers": "no institution",
 		"oneIssuer": "one institution",
-		"multiIssuers": "# institutions",
+		"multiIssuers": "institutions",
 		"noBadges": "No badges",
 		"oneBadge": "1 badge",
-		"multiBadges": "# badges",
+		"multiBadges": "badges",
 		"noRecipients": "No recipient",
 		"oneRecipient": "1 recipient",
 		"multiRecipients": "recipients",
