--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -715,7 +715,9 @@
 		"uploadEmailDoesNotMatchError": "The email address in the badge does not match the email in your OEB profile.",
 		"addEmailToUpload": "Add the email address to your profile to upload the badge.",
 		"versionUploadInfo": "We validate badges in the 2.0 standard when they are uploaded. We can currently only validate badges in the 3.0 standard to a minimal extent. You can find more information on this in our <a class=\"tw-text-link tw-underline\" href=\"/public/faq\">FAQ</a>.",
-		"addingBadge": "Adding Badge ..."
+		"addingBadge": "Adding Badge ...",
+		"skillVisualisationIntro": "[TRANSLATE] In diesen Bereichen hast du am meisten Kompetenzen gestärkt:",
+		"skillVisualisationHelp": "[TRANSLATE] Bewege den Mauszeiger über die Kreise, um die zugehörigen Kompetenzen zu sehen."
 	},
 	"EditBadge": {
 		"editBadge": "Edit badge",
