--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -717,7 +717,8 @@
 		"versionUploadInfo": "We validate badges in the 2.0 standard when they are uploaded. We can currently only validate badges in the 3.0 standard to a minimal extent. You can find more information on this in our <a class=\"tw-text-link tw-underline\" href=\"/public/faq\">FAQ</a>.",
 		"addingBadge": "Adding Badge ...",
 		"skillVisualisationIntro": "These are the areas in which you have strengthened your skills the most:",
-		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills."
+		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills.",
+		"skillVisualisationSingleIntro": "Your skills in the area of "
 	},
 	"EditBadge": {
 		"editBadge": "Edit badge",
