feat: more translations

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -688,6 +688,7 @@
 		"groupByInstitution": "Nach Institutionen gruppieren",
 		"institution": "Institution",
 		"greating": "Hallo",
+		"greating2": "willkommen in deinem Rucksack!",
 		"competencies": "Kompetenzen",
 		"studyingTime": "Lernzeit",
 		"hours": "Stunden",
