--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -688,6 +688,7 @@
 		"groupByInstitution": "Group by institution",
 		"institution": "Institution",
 		"greating": "Hello",
+		"greating2": "welcome to your backpack!",
 		"competencies": "Skills",
 		"studyingTime": "Learning time",
 		"hours": "Hours",
