feat: improve the tooltip a bit

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -719,7 +719,9 @@
 		"addingBadge": "Füge Badge hinzu ...",
 		"skillVisualisationIntro": "In diesen Bereichen hast du am meisten Kompetenzen gestärkt:",
 		"skillVisualisationHelp": "Bewege den Mauszeiger über die Kreise, um die zugehörigen Kompetenzen zu sehen.",
-		"skillVisualisationSingleIntro": "Deine Kompetenzen im Bereich "
+		"skillVisualisationSingleIntro": "Deine Kompetenzen im Bereich ",
+		"FutureSkillsAccrodingToUlfEhers": "Future Skills nach Ulf Ehers",
+		"ESCOAreas": "ESCO-Bereiche"
 	},
 	"EditBadge": {
 		"editBadge": "Badge editieren",
