--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -977,7 +977,11 @@
 		"deleteMd": "Micro Degree löschen",
 		"mdUsers": "Micro Degree-Nutzende",
 		"searchMds": "Micro Degrees durchsuchen",
-		"saving": "Speichere"
+		"saving": "Speichere",
+		"flexibleSelection": "Auswahl für flexiblen Lernpfad",
+		"flexibleSelectionInfo": "Lege hier fest, wieviele der ausgewählten Badges erworben werden müssen, damit die lernende Person den Abschluss Micro Degree erhält:",
+		"learnersHaveTo": "Lernende müssen",
+		"learnersHaveTo2": "der oben ausgewählten Badges erwerben, um den Abschluss-Badge Micro Degree zu erhalten."
 	},
 	"LearningPathEditor": {
 		"shortDescription": "Zusammenfassende Beschreibung deines Micro Degrees. Diese Kurzbeschreibung wird im Micro Degree gespeichert."
