--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -977,7 +977,11 @@
 		"deleteMd": "delete micro degree",
 		"mdUsers": "Micro Degree users",
 		"searchMds": "search micro degrees",
-		"saving": "Saving"
+		"saving": "Saving",
+		"flexibleSelection": "Selection for flexible learning path",
+		"flexibleSelectionInfo": "Specify here how many of the selected badges must be earned in order for the learner to receive the Micro Degree:",
+		"learnersHaveTo": "Learners have to",
+		"learnersHaveTo2": "of the badges selected above in order to receive the Micro Degree badge."
 	},
 	"LearningPathEditor": {
 		"shortDescription": "Summarized description of your Micro Degree. This short description will be saved in the Micro Degree."
