--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -690,7 +690,7 @@
 		"greating": "Hello",
 		"competencies": "Skills",
 		"studyingTime": "Learning time",
-		"hours": "Hours",
+		"hours": "hours",
 		"newCompetencies": "New skills",
 		"skills": "Skills",
 		"knowledge": "Knowledge",
