fix: capitalize hours (#1407)
* fix: capitalize hours

* fix: english translation lowercase

* fix: rm unused lowercase pipe

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -691,7 +691,7 @@
 		"greating": "Hello",
 		"competencies": "Skills",
 		"studyingTime": "Learning time",
-		"hours": "Hours",
+		"hours": "hours",
 		"newCompetencies": "New skills",
 		"skills": "Skills",
 		"knowledge": "Knowledge",
