--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -688,6 +688,7 @@
 		"groupByInstitution": "Group by institution",
 		"institution": "Institution",
 		"greating": "Hello",
+		"greating2": "welcome to your backpack!",
 		"competencies": "Skills",
 		"studyingTime": "Learning time",
 		"hours": "hours",
@@ -715,7 +716,12 @@
 		"uploadEmailDoesNotMatchError": "The email address in the badge does not match the email in your OEB profile.",
 		"addEmailToUpload": "Add the email address to your profile to upload the badge.",
 		"versionUploadInfo": "We validate badges in the 2.0 standard when they are uploaded. We can currently only validate badges in the 3.0 standard to a minimal extent. You can find more information on this in our <a class=\"tw-text-link tw-underline\" href=\"/public/faq\">FAQ</a>.",
-		"addingBadge": "Adding Badge ..."
+		"addingBadge": "Adding Badge ...",
+		"skillVisualisationIntro": "These are the areas in which you have strengthened your skills the most:",
+		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills.",
+		"skillVisualisationSingleIntro": "Your skills in the area of ",
+		"FutureSkillsAccrodingToUlfEhers": "Future Skills according to Ulf Ehers",
+		"ESCOAreas": "ESCO areas"
 	},
 	"EditBadge": {
 		"editBadge": "Edit badge",
