feat(translations): add missing translation and rename menu item

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -116,7 +116,7 @@
 		"appIntegrations": "App Integrationen",
 		"openMenu": "Menü öffnen",
 		"logout": "Ausloggen",
-		"myProfile": "Mein Profil",
+		"myProfile": "Mein Account",
 		"faq": "FAQ"
 	},
 	"Start": {
