--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,7 +116,7 @@
 		"appIntegrations": "App Integrations",
 		"openMenu": "Open menu",
 		"logout": "Log out",
-		"myProfile": "My profile",
+		"myProfile": "My account",
 		"faq": "FAQ"
 	},
 	"Start": {
