fix(translations): use correct name for dr. ehlers

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -720,7 +720,7 @@
 		"skillVisualisationIntro": "In diesen Bereichen hast du am meisten Kompetenzen gestärkt:",
 		"skillVisualisationHelp": "Bewege den Mauszeiger über die Kreise, um die zugehörigen Kompetenzen zu sehen.",
 		"skillVisualisationSingleIntro": "Deine Kompetenzen im Bereich ",
-		"FutureSkillsAccrodingToUlfEhers": "Future Skills nach Ulf Ehers",
+		"FutureSkillsAccrodingToUlfEhlers": "Future Skills nach Ulf Ehlers",
 		"ESCOAreas": "ESCO-Bereiche"
 	},
 	"EditBadge": {
