--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -720,7 +720,7 @@
 		"skillVisualisationIntro": "These are the areas in which you have strengthened your skills the most:",
 		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills.",
 		"skillVisualisationSingleIntro": "Your skills in the area of ",
-		"FutureSkillsAccrodingToUlfEhers": "Future Skills according to Ulf Ehers",
+		"FutureSkillsAccrodingToUlfEhlers": "Future Skills according to Ulf Ehlers",
 		"ESCOAreas": "ESCO areas"
 	},
 	"EditBadge": {
