Fix/learning profile findings (#1411)
* feat(translations): add missing translation and rename menu item

* fix(layout): use full width for very short esco titles

this is required s.t. the learning time indicator has enough space

* fix(translations): use correct name for dr. ehlers

* fix(translations): properly translate tabs

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -116,7 +116,7 @@
 		"appIntegrations": "App Integrationen",
 		"openMenu": "Menü öffnen",
 		"logout": "Ausloggen",
-		"myProfile": "Mein Profil",
+		"myProfile": "Mein Account",
 		"faq": "FAQ"
 	},
 	"Start": {
@@ -720,7 +720,7 @@
 		"skillVisualisationIntro": "In diesen Bereichen hast du am meisten Kompetenzen gestärkt:",
 		"skillVisualisationHelp": "Bewege den Mauszeiger über die Kreise, um die zugehörigen Kompetenzen zu sehen.",
 		"skillVisualisationSingleIntro": "Deine Kompetenzen im Bereich ",
-		"FutureSkillsAccrodingToUlfEhers": "Future Skills nach Ulf Ehers",
+		"FutureSkillsAccrodingToUlfEhlers": "Future Skills nach Ulf Ehlers",
 		"ESCOAreas": "ESCO-Bereiche"
 	},
 	"EditBadge": {
