Fix/learning profile findings (#1411)
* feat(translations): add missing translation and rename menu item

* fix(layout): use full width for very short esco titles

this is required s.t. the learning time indicator has enough space

* fix(translations): use correct name for dr. ehlers

* fix(translations): properly translate tabs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,7 +117,7 @@
 		"appIntegrations": "App Integrations",
 		"openMenu": "Open menu",
 		"logout": "Log out",
-		"myProfile": "My profile",
+		"myProfile": "My account",
 		"faq": "FAQ"
 	},
 	"Start": {
@@ -721,7 +721,7 @@
 		"skillVisualisationIntro": "These are the areas in which you have strengthened your skills the most:",
 		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills.",
 		"skillVisualisationSingleIntro": "Your skills in the area of ",
-		"FutureSkillsAccrodingToUlfEhers": "Future Skills according to Ulf Ehers",
+		"FutureSkillsAccrodingToUlfEhlers": "Future Skills according to Ulf Ehlers",
 		"ESCOAreas": "ESCO areas"
 	},
 	"EditBadge": {
