--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -973,8 +973,12 @@
 		"deleteWarning": "Möchtest du diesen Micro Degree wirklich löschen?",
 		"mdImage": "Micro-Degree Bild",
 		"lastBadgeInfo": "Den Abschluss-Badge <strong class='tw-text-purple'>Micro Degree</strong> erhalten Lernende automatisiert per E-Mail, sobald sie alle darin enthaltenen Badges erworben haben.",
+		"activateMd": "Micro Degree freischalten",
+		"activationInfo": "Wenn du den Micro Degree zur Nutzung freischaltest, <span class='tw-font-bold'>kannst du ihn danach nicht mehr bearbeiten</span>. ",
+		"activationInfo2": "Zeitgleich erhalten Lernende, die bereits im Besitz der im Lernpfad enthaltenen Badges sind, automatisch den Micro Degree.",
+		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Micro Degree zur Nutzung freischalten</span>",
+		"notActivatedYet": "Der Lernpfad ist noch nicht zur Nutzung freigeschaltet.",
 		"finishedOn": "Abgeschlossen am",
-		"deleteMd": "Micro Degree löschen",
 		"mdUsers": "Micro Degree-Nutzende",
 		"searchMds": "Micro Degrees durchsuchen",
 		"saving": "Speichere",
