--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -973,8 +973,12 @@
 		"deleteWarning": "Do you really want to delete this Micro Degree?",
 		"mdImage": "Micro degree image",
 		"lastBadgeInfo": "Learners automatically receive the <strong class='tw-text-purple'>Micro Degree</strong> badge by e-mail, as soon as they have earned all the badges it contains.",
+		"activateMd": "Unlock Micro Degree",
+		"activationInfo": "When you activate the Micro Degree for use, <span class='tw-font-bold'>you can no longer edit it afterwards</span>. ",
+		"activationInfo2": "At the same time, learners who already have the badges included in the learning pathway automatically receive the Micro Degree.",
+		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Unlock Micro Degree for use</span>",
+		"notActivatedYet": "The Micro Degree is not yet unlocked for use.",
 		"finishedOn": "finished on",
-		"deleteMd": "delete micro degree",
 		"mdUsers": "Micro Degree users",
 		"searchMds": "search micro degrees",
 		"saving": "Saving",
