--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -106,7 +106,8 @@
 		"expired": "abgelaufen",
 		"emailAddress": "E-Mail-Adresse",
 		"tos": "Nutzungsbedingungen",
-		"change": "ändern"
+		"change": "ändern",
+		"condition": "Bedingung"
 	},
 	"NavItems": {
 		"register": "Registrieren",
@@ -986,7 +987,9 @@
 		"flexibleSelectionInfo": "Lege hier fest, wieviele der ausgewählten Badges erworben werden müssen, damit die lernende Person den Abschluss Micro Degree erhält:",
 		"learnersHaveTo": "Lernende müssen",
 		"learnersHaveTo2": "der oben ausgewählten Badges erwerben, um den Abschluss-Badge Micro Degree zu erhalten.",
-		"chooseMin3Badges": "Wähle mindestens 3 Badges aus"
+		"chooseMin3Badges": "Wähle mindestens 3 Badges aus",
+		"studentsMustEarn": "Lernende müssen <span class='tw-font-bold'>{{ count_required }} der {{count_total}} Badges erwerben</span>, um den Abschluss-Badge Micro Degree zu erhalten.",
+		"condition": "Du musst <span class='tw-font-bold'>{{ count_required }} der {{count_total}} Badges erwerben</span>, um den Micro Degree zu erhalten."
 	},
 	"LearningPathEditor": {
 		"shortDescription": "Zusammenfassende Beschreibung deines Micro Degrees. Diese Kurzbeschreibung wird im Micro Degree gespeichert."
