feat(badge-catalog): make loaded badges pretty

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -445,7 +445,8 @@
 		"copyForWhatInstitution": "For which of your institutions do you want to copy the badge?",
 		"copyPermissionInfo": "The copy status of this badge only allows copying inside this institution.",
 		"awardingInProgress": "Badge awarding in progress",
-		"willBeAwardedSoon": "We will have awarded the badges soon!"
+		"willBeAwardedSoon": "We will have awarded the badges soon!",
+		"catalogAllLoaded": "All badges matching your search criteria loaded."
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Choose category",
