--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -445,7 +445,8 @@
 		"standard-info-20": "Alle Badges, die vor Juni 2025 auf OEB erstellt wurden, haben den 2.0-Standard. Weitere Infos dazu findest du in unseren <a class='tw-underline' href='/public/faq'>FAQ</a>.",
 		"standard-info-30": "Seit Juni 2025 werden alle Badges auf OEB im neuen, zukunfts-sicheren 3.0-Standard erstellt. Weitere Infos dazu findest du in unseren <a class='tw-underline' href='/public/faq'>FAQ</a>.",
 		"awardingInProgress": "Badge-Vergabe läuft",
-		"willBeAwardedSoon": "Gleich haben wir alle Badges verschickt!"
+		"willBeAwardedSoon": "Gleich haben wir alle Badges verschickt!",
+		"catalogAllLoaded": "Alle Badges, die deinen Suchkriterien entsprechen, wurden geladen."
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Kategorie wählen",
