feat: add learningpath activation link

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -978,7 +978,9 @@
 		"activationInfo": "Wenn du den Micro Degree zur Nutzung freischaltest, <span class='tw-font-bold'>kannst du ihn danach nicht mehr bearbeiten</span>. ",
 		"activationInfo2": "Zeitgleich erhalten Lernende, die bereits im Besitz der im Lernpfad enthaltenen Badges sind, automatisch den Micro Degree.",
 		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Micro Degree zur Nutzung freischalten</span>",
-		"notActivatedYet": "Der Lernpfad ist noch nicht zur Nutzung freigeschaltet.",
+		"notActivatedYetStart": "Der Lernpfad ist noch nicht zur Nutzung",
+		"notActivatedYetLink": "freigeschaltet",
+		"notActivatedYetEnd": ".",
 		"finishedOn": "Abgeschlossen am",
 		"mdUsers": "Micro Degree-Nutzende",
 		"searchMds": "Micro Degrees durchsuchen",
