--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -978,7 +978,9 @@
 		"activationInfo": "When you activate the Micro Degree for use, <span class='tw-font-bold'>you can no longer edit it afterwards</span>. ",
 		"activationInfo2": "At the same time, learners who already have the badges included in the learning pathway automatically receive the Micro Degree.",
 		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Unlock Micro Degree for use</span>",
-		"notActivatedYet": "The Micro Degree is not yet unlocked for use.",
+		"notActivatedYetStart": "The Micro Degree is not yet",
+		"notActivatedYetLink": "unlocked",
+		"notActivatedYetEnd": "for use.",
 		"finishedOn": "finished on",
 		"mdUsers": "Micro Degree users",
 		"searchMds": "search micro degrees",
