--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -985,14 +985,14 @@
 		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Unlock Micro Degree for use</span>",
 		"notActivatedYetStart": "The Micro Degree is not yet",
 		"notActivatedYetLink": "unlocked",
-		"notActivatedYetEnd": "for use.",
+		"notActivatedYetEnd": " for use.",
 		"finishedOn": "finished on",
 		"mdUsers": "Micro Degree users",
 		"searchMds": "search micro degrees",
 		"saving": "Saving",
 		"flexibleSelection": "Selection for flexible learning path",
 		"flexibleSelectionInfo": "Specify here how many of the selected badges must be earned in order for the learner to receive the Micro Degree:",
-		"learnersHaveTo": "Learners have to",
+		"learnersHaveTo": "Learners have to acquire",
 		"learnersHaveTo2": "of the badges selected above in order to receive the Micro Degree badge.",
 		"chooseMin2Badges": "Choose at least 2 badges",
 		"studentsMustEarn": "Students <span class='tw-font-bold'>must earn {{ count_required }} of the {{count_total}} badges </span> to receive the Micro Degree badge.",
